# baselayerOS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  demo_compliance_run.py  integration_enterprise.md  pyproject.toml
apps/grievances/: database.py  deadlines.py  grievance_assistant.py  grievances.db  index.html  main.py  models.py  package-lock.json  package.json  policy.py  repositories.py  runtime.py  schemas.py  state_machine.py
baselayeros/actiongraph/: compiler.py  executor.py  model.py
baselayeros/baselayeros/: config.py  context.py  env.py  errors.py  logging.py  state.py  version.py
baselayeros/cli/: parser.js  react-generator.js  regulus.js  validator.js
baselayeros/config/: config_loader.py  config_validator.py
baselayeros/demo/: README.md  run_demo.py
baselayeros/regulus/: __init__.py  audit_view.py  builder.py  config.py  dashboard.py  explain.py  interface.py  policy.py  policy_linter.py  policy_pack.py  risk.py  scheduler.py  simulator.py  templates.py  timeline.py  ui_flow.py
baselayeros/tools/: blosctl.py
companies/compliance/: actiongraph.py  company.py  config.py  graph.py  models.py
config/: base.yaml  dev.yaml  operator_contract.json  prod.yaml
data/documents/: cust_001.json
demo/: giu_ledger.json
demo/backend/: ingestion.py  ledger.py  registry.py  routes_publish.py
docs/: architecture.md  audit-log-format.md  audit.md  audit_example.md  capabilities.md  compiler.md  compliance-pack-interface.md  councils.md  deterministic-runtime.md  examples.md  executor.md  getting_started.md  integration_regulus.md  integrator-guide.md  lifecycle.md  module-contract.md  overview.md  pipeline.md  replay_engine.md  ues_format.md  workflow-spec.md
giu/: ledger.py  metering.py  pricing.py
giu/flows/: compliance_flow.py
kali/: audit_chain.py  authority_gate.py  commit.py  config.py  events.py  human_callback.py  operator_contract.py  refusal.py
playground/: Playground.jsx  index.html  main.jsx
playground/editor/: Editor.jsx
playground/preview/: ErrorPanel.js  preview.jsx
playground/renderer/: renderAST.js
sdk/examples/: build-a-module.md  (+1 more)
standard/: DETERMINISM_STANDARD.md
tests/: test_actions.py  test_burn.py  test_capabilities.py  test_end_to_end.py  test_invariants.py  test_ledger.py  test_registry_frozen.py  test_replay.py
(+168 files in other folders)
