[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baselayer-substrate"
version = "0.1.0"
description = "Deterministic execution substrate with GIU-metered actions and invariants."
authors = [
  { name = "BaseLayer OS", email = "info@baselayer.example" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0.0",
  "pytest",
  
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
