[project]
name = "baselayeros"
version = "0.1.0"
description = "Deterministic AI substrate with GIU-governed execution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "James Archer-Lewis" }
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "click>=8.1.0"
]

[project.scripts]
baselayeros = "baselayeros.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["baselayeros*"]
